--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <h2>About Me</h2>
         <div class="about-content">
             <div class="about-text">
-                <p><span class="icon">&#128188;</span> I am a multi-disciplinary professional with over <strong>15 years of experience</strong> in <strong>Human Resources, Call Centers, and Support Desk Operations</strong>. My goal is to provide efficient and customer-focused solutions that improve employee engagement and operational excellence.</p>
-                <p><span class="icon">&#128222;</span> I specialize in <strong>streamlining call center and support desk workflows</strong>, managing multilingual teams (English, Romanian, Dutch), and implementing technologies that enhance communication and customer service experiences.</p>
+                <p><span class="icon">&#128188;</span> I am a multi-disciplinary professional with over <strong>4 years of experience</strong> in <strong>Human Resources, Call Centers, and Support Desk Operations</strong>. My goal is to provide efficient and customer-focused solutions that improve employee engagement and operational excellence.</p>
+                <p><span class="icon">&#128222;</span> I specialize in <strong>streamlining call center and support desk workflows</strong>, managing multilingual teams (English, Romanian), and implementing technologies that enhance communication and customer service experiences.</p>
                 <p><span class="icon">&#127912;</span> Throughout my career, I have also worked as a <strong>professional artist and designer</strong>, collaborating with <strong>XindexStudios</strong> and various indie companies, delivering visually engaging and creative projects for their brands and products.</p>
             </div>
             <div class="about-image">
